--- a/css/salma.css
+++ b/css/salma.css
@@ -14,7 +14,7 @@ body{
     text-align: center;
    padding:50px }
  
- .ph11{
+ .ph1{
   margin-right: 100px;
    width:100%;
  }
@@ -28,11 +28,7 @@ body{
   padding-top:20px;
   background: white
  }
- .ll{
-  width: 10px;
-  height: 2px;
-  background: grey
- }
+
  .part3{
  background: white ;
  padding-top:20px;
@@ -42,13 +38,13 @@ body{
    background: #DDD;
    padding: 50px
  }
-  .phs{
+  .div2{
   background: #333;
   padding: 50px 50px 50px 50px;
   text-align: center;
 
  }
- .ww{
+ .main1{
  color: white;
  background: black;
  border-bottom: 3px;
@@ -65,13 +61,13 @@ padding-bottom: 0;
  border-bottom: 3px;
   height: 70px;
    width:800px;
-   margin-left: 100px
+   margin-left: 100px;
   }
    .ph6{
 
   width:100%;}
   
-  .dd{
+  .main2{
  background:grey;
 padding-bottom: 30px;
  padding-top: 30px;
@@ -87,7 +83,7 @@ padding-bottom: 30px;
   width:100%;
 
 }
-.kk{
+.main3{
  
  background: #333;
   color:white;
@@ -100,7 +96,7 @@ padding-bottom: 30px;
   padding-bottom:20px 
 
 }
-.oo{
+.main4{
   color:black;
   background:#F0F8FF;
   padding-top: 20px;
@@ -139,18 +135,16 @@ padding-left:100px
  width: 400px;
  padding-left:100px 
 }
-.vv{
+.div3{
  clear: both
 }
-.hh{
- text-align: center;
-}
-.bb{
+
+.icon{
 width: 50px;
 height: 40px;
 color:grey
 }
-.tt{
+.div4{
  margin-bottom: 30px
 }
 
